--- a/02_food_ordering_app/src/app/globals.css
+++ b/02_food_ordering_app/src/app/globals.css
@@ -4,5 +4,30 @@
 
 section.hero {
   @apply grid;
-  grid-template-columns: .4fr .6fr;
+  grid-template-columns: 0.4fr 0.6fr;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  @apply block w-full my-4 rounded-xl;
+  @apply block border p-2 border-gray-300 bg-gray-100;
+}
+
+button {
+  @apply block w-full text-gray-700 font-semibold;
+  @apply border rounded-xl border-gray-700 px-6 py-2;
+}
+
+button[type="submit"],
+.submit {
+  @apply border-0 bg-primary text-white;
+}
+
+button[disabled] {
+  @apply bg-gray-300 text-gray-500;
+}
+
+input[disabled] {
+  @apply bg-gray-300 text-gray-500;
 }
